--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -539,6 +539,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/background_border"
+        android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
