--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -544,12 +544,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonSale"
         android:layout_width="186dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
         android:layout_marginStart="8dp"
         android:text="Satışı Onayla"
+        android:onClick="RelativeLayoutOnClick"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintStart_toStartOf="@+id/listView" />
 
